[lib]
proc-macro = true

[package]
name = "timed_fields"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.25", features = ["serde"] }
proc-macro2 = "1.0.59"
quote = "1.0.28"
serde = { version = "1.0.163", features = ["derive"] }
syn = { version = "2.0.18", features = ["full"] }
